--- a/SEA_Application/Views/AspnetSubjectTopics/ViewTopicsAndLessons.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/ViewTopicsAndLessons.cshtml
@@ -52,7 +52,7 @@
                         {
                             text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Create</span>',
                             action: function (e, dt, button, config) {
-                                window.location.href = '/AspnetLessons/Create';
+                                window.location.href = '/AspnetLessons/Create?id=' + 0;
                             }
                         },
                         {
