--- a/SEA_Application/Views/AspnetSubjectTopics/Edit.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/Edit.cshtml
@@ -51,6 +51,13 @@
             window.location.href = "/AspnetSubjectTopics/ViewTopicsAndLessons";
         })
 
+        var TopicId = $("#Id").val();
+
+        $("#CreateLesson").click(function () {
+
+            window.location.href = "/AspnetLessons/Create?id=" + TopicId;
+
+        });
 
         var course = 'CSS';
         var Class;
@@ -242,8 +249,10 @@
 
 
                     <div class="col-md-8 pl-5 pr-5 ">
-                        <button type="submit" class="btn btn-primary rounded rounded-lg"> Update </button>
 
+                        <button id="CreateLesson" type="button" class="btn btn-success rounded rounded-lg"> Create Lesson </button>
+
+                        <button type="submit" class="btn btn-primary rounded rounded-lg"> Update </button>
 
                         <button type="button" id="btnCancel" class="btn btn-primary rounded rounded-lg bg-transparent text-muted shadow-none mr-3">
                             <i class="material-icons mr-2">cached</i>  Cancel
