--- a/SEA_Application/Views/Shared/_TeacherDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_TeacherDashboardLayout.cshtml
@@ -116,14 +116,14 @@
 
 
 
-                    <li class="nav-item">
+                    @*<li class="nav-item">
                         <a href="@(Url.Action("Index", "TeacherCommentsOnCourses"))" class="nav-link nav-toggle">
                             <i class="sea-dash">
                                 <img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">
                             </i>
                             <p>Courses</p>
                         </a>
-                    </li>
+                    </li>*@
 
                     <li class="nav-item">
                         <a href="@Url.Action("StudentAssignments", "StudentAssignmentSubmitted")" class="nav-link nav-toggle">
